# api_gateway

./: .gitignore  README.md  alembic.ini  config.py  docker-compose.yaml  pyproject.toml  requirements.in  requirements.txt  wsgi.py
adsws/: app.py  config.py  extensions.py  model.py  service.py
adsws/auth/: model.py  schema.py  service.py  views.py
adsws/auth/oauth2/: model.py
adsws/gateway/: service.py  views.py
adsws/migrations/: 128b05bdb34b_initial_revision.py  1b270ba35f29_user_uniquifier_must_not_be_nullable.py  4c34debb0abf_create_foreign_keys.py
apigateway/: app.py  config.py  email_templates.py  exceptions.py  extensions.py  models.py  schema.py  schemas.py  service.py  services.py  utils.py  views.py
apigateway/migrations/: 210888fe1514_seperate_user_name_column_into_given_.py  509466721b72_initial_revision.py  82ba07db456d_create_user_role_mapping.py  a9f3bcacacf4_initial_revision.py  af3987f06bd8_create_emailchangerequest_table.py  ca86d7d93127_initial_revision.py
apigateway/tests/: conftest.py  test_services.py  test_views.py
migrations/: env.py
migrations/versions/: 8e0d08daa203_new_gateway_version.py
